syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service Workflow {
  rpc HandleWorkflow (WorkflowStatusPayload) returns (WorkflowHistory) {}
  rpc HandleTask (TaskStatusPayload) returns (TaskHistory) {}
}

message TaskStatusPayload {
	string workflow_history_id = 1;
	string task_id = 2;
	string name = 3;
	string description = 4;
	optional string parameters = 5;
	optional string connector_name = 6;
	optional string connector_id = 7;
	string operation = 8;
	optional string config = 9;
	float x = 10;
	float y = 11;
	optional string status = 12;
	optional string error = 13;
	string result = 14;
}

message WorkflowStatusPayload {
  string workflow_history_id = 1;
  optional string status = 2;
  optional string error = 3;
  optional string result = 4;
}

message WorkflowHistory {
  string id = 1;
  string workflow_id = 2;
  string status = 3;
  optional string error = 4;
  google.protobuf.Value result = 5;
  google.protobuf.Timestamp triggered_at = 6;
  google.protobuf.Struct edges = 7;
}


message TaskHistory {
  string id = 1;
  string workflow_history_id = 2;
  string task_id = 3;
  string status = 4;
  optional string error = 5;
  google.protobuf.Value result = 6;
  google.protobuf.Timestamp triggered_at = 7;
  string name = 8;
  optional string config = 9;
  optional string connector_name = 10;
  optional string connect_id = 11;
  string operation = 12;
  string description = 13;
  google.protobuf.Value parameters = 14;
  float x = 15;
  float y = 16;
  repeated string destination_ids = 17;
}